User Interface Edit

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<div class="span8">
 				
 
-				<h3>Use the Buttons or your directional keys.</h3>
+				<h3>Use the buttons or your directional keys!</h3>
 
 				<center><button onclick="moveUp()"> ^ </button></br></center>
 				<center><button onclick="moveLeft()"> < </button>
