--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="style.css" media="all">
 </head>
 <body onload="myFunction()">
+	<a href="https://github.com/yvescourtois"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
     <div class="centered">
 		<img src="banner.png"></img>
 		<hr>
